cmake_minimum_required(VERSION 2.8)
PROJECT(pbjson)
SET(CMAKE_CXX_FLAGS_RELEASE " $ENV{CXXFLAGS} -fPIC -O3 -w")
ADD_DEFINITIONS(-fPIC -g)
FILE(GLOB_RECURSE SRC_LISTS *.cpp *.c *.cc)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LISTS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} protobuf)
INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR})
