cmake_minimum_required(VERSION 2.8)
PROJECT(pbjson)

SET(CONAN_FILE_NAME "conanfile.txt")
execute_process(COMMAND conan install -f ${PROJECT_SOURCE_DIR}/${CONAN_FILE_NAME} --build=missing)

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

SET(CMAKE_CXX_FLAGS_RELEASE " $ENV{CXXFLAGS} -fPIC -O3 -w")
ADD_DEFINITIONS(-fPIC)

FILE(GLOB_RECURSE SRC_LISTS *.cpp *.c *.cc)

INCLUDE_DIRECTORIES(${CONAN_INCLUDE_DIRS})

SET(PLATFORM ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})
foreach (libdir ${CONAN_LIB_DIRS})
    LIST(APPEND LIBSDIR ${libdir}/${PLATFORM})
endforeach (libdir)
LINK_DIRECTORIES(${LIBSDIR} ${CONAN_LIB_DIRS})

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LISTS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CONAN_LIBS_PROTOBUF})

INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR})
